# Document-Processing-Pipeline

./: .gitignore  LICENSE  README.md  log.txt  main.py  model_specification_report.md  pyproject.toml  requirements.txt  visualize_output.py
src/: config.py  postprocessing.py  processing_pipeline.py  utils.py
src/models/: handwriting.py  layout.py  table.py
src/postprocessing/: __init__.py  hallucination.py  helpers.py  normalization.py  ocr_corrections.py  phone_date.py  pipeline.py  signatures.py  table_validation.py
src/resources/: domain_dictionary.txt
src/utils/: __init__.py  bbox.py  classification.py  image.py  text.py
tests/: conftest.py  flexible_evaluation.py  test_accuracy.py  test_baseline.json  test_postprocessing.py
